# Merchandiser_Products_Counter

./: .gitignore  main.py  pyproject.toml  requirements.txt
research/: 01_CNN_Image_Matching.ipynb  02_CLIP_Image_Matching.ipynb  03_DINOv2_Embedding.ipynb  04_Marqo_Ecommerce_Embedding_Models.ipynb  Testing_codes.ipynb
src/core/: embedding_extractor.py  object_detector.py
src/exceptions/: __init__.py  core_exceptions.py
src/utils/: file_utils.py  image_utils.py  logging_utils.py
